# internal/handler/cars.go
@@ -21,6 +21,7 @@ func (h *Handler) ListCars(ctx context.Context, params oas.ListCarsParams) (oas.
 		PIMin:      optIntFilter(params.PiMin),
 		PIMax:      optIntFilter(params.PiMax),
 		Drivetrain: optFilter(params.Drivetrain.Set, string(params.Drivetrain.Value)),
+		Category:   optFilter(params.Category.Set, params.Category.Value),
 		Q:          optFilter(params.Q.Set, params.Q.Value),
 		Dlc:        optFilter(params.Dlc.Set, params.Dlc.Value),
 		Limit:      size,
@@ -44,6 +45,7 @@ func (h *Handler) ListCars(ctx context.Context, params oas.ListCarsParams) (oas.
 			Drivetrain:   oas.Drivetrain(c.Drivetrain),
 			Stats:        optCarStats(c.Stats),
 			BodyType:     optString(c.BodyType),
+			Category:     optString(c.Category),
 			Rarity:       optString(c.Rarity),
 			ValueCr:      optInt64(c.ValueCr),
 			ObtainMethod: optString(c.ObtainMethod),
